--- a/安装说明.md
+++ b/安装说明.md
@@ -1,7 +1,7 @@
 # 安装CN GitHub Desktop说明
 
   
-第一步：找台 Win 10 的电脑  
+第一步：找台 Win 10 或 Win 11 的电脑  (有Win12以上也可以)
   
 第二步：下载GitHub Desktop  
     页面下载: https://desktop.github.com/  
