--- a/安装说明.md
+++ b/安装说明.md
@@ -16,3 +16,12 @@
 第五步: 解压 CN-GitHub-Desktop-main.zip 后执行 setup_cn.bat 或 setup_tw.bat  
   
 第六步: 在“桌面”或“开始”找到GitHubDesktop执行  
+
+第七步: 登录帐号(第一次使用GitHub Desktop要注册一下帐号)
+
+第八步: 在GitHub Desktop软件选择"文件"-"克隆代码仓"
+
+第九步: 选择网址
+		网址栏填"https://github.com/lgw88/CN-GitHub-Desktop"
+		路径按自己情况填(我喜欢是D:\GitHub\XXXXX\)
+    开始克隆
